# python-tak-rmapi

./: .bumpversion.cfg  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_alpine  Dockerfile_debian  README.rst  pyproject.toml  update_instructions.sh
.github/workflows/: build.yml  version-check.yml
docker/: container-init.sh  docker-compose.yml  entrypoint-test.sh  entrypoint.sh  pre_commit_init.sh
instructions/: tak.json
instructions/translations/: ServiceTak.en.json  ServiceTak.fi.json
instructions_api/: README.md
src/takrmapi/: __init__.py  __main__.py  app.py  commands.py  config.py  console.py  settings.py  tak_helpers.py  tak_init.py  tak_schema.py
src/takrmapi/api/: __init__.py  admininfo.py  clientinfo.py  description.py  healthcheck.py  helpers.py  instructions.py  interop.py  proxy.py  schemas.py  tak_datapackage.py  tak_missionpackage.py  usercrud.py  userinfo.py
src/takrmapi/taktools/: __init__.py  tak_admin_helpers.py  tak_init.py  tak_pkg_helpers.py  tak_pkg_sitevars.py  tak_rest_helpers.py  tak_schema.py  tak_template_helpers.py  tak_viteasset_helpers.py
src/takrmapi/takutils/: tak_admin_helpers.py  tak_helpers.py  tak_init.py  tak_pkg_dynpkg.py  tak_pkg_helpers.py  tak_pkg_sitevars.py  tak_pkg_vars.py  tak_pkg_viteasset.py  tak_rest_helpers.py  tak_schema.py  tak_template_helpers.py  tak_viteasset_helpers.py
src/takrmapi/templates/: isrg-r10_x1.pem
src/takrmapi/templates/tak_datapackage/default/ATAK-Toolbar/: TeamMember_Toolbar.pref
src/takrmapi/templates/tak_datapackage/default/Maps/: Google_Satellite.xml  Map_defaults.pref
src/takrmapi/templates/tak_datapackage/default/Mesh Encryption/: Mesh-Encryption-key.pref
src/takrmapi/templates/tak_datapackage/default/Mesh-Encryption/: Mesh-Encryption-key.pref.tpl
src/takrmapi/templates/tak_datapackage/default/TAK Chat/: TAK-Chat.pref
src/takrmapi/templates/tak_datapackage/default/TAK-Chat/: TAK-Chat.pref
src/takrmapi/templates/tak_viteassets/neutral/: placeholder.txt
src/takrmapi/web/: application.py
src/takrmapi/web/api/: router.py
src/takrmapi/web/api/cmd/: __init__.py  schema.py  views.py
src/takrmapi/web/api/config/: __init__.py  views.py
src/takrmapi/web/api/healthcheck/: __init__.py
src/takrmapi/web/api/release/: __init__.py  schema.py  views.py
tests/: conftest.py  test_api_cmd.py  test_api_config.py  test_api_release.py  test_cli_console.py  test_console.py  test_crud.py  test_descriptions.py  test_fragment.py  test_openapi.py  test_takrmapi.py
tests/data/cfssl/: init_ca-key-priv.pem  init_ca-key.pem  init_ca.pem  kissakoira123-key-priv.pem  kissakoira123-key.pem  kissakoira123.pem  kissakoira123.pfx  kissakoira123_bundle.pem  porakoira123-key-priv.pem  porakoira123-key.pem  porakoira123.pem  priv-key-passphrase.txt  tak-host-key-priv.pem  tak-host-key.pem  tak-host.pem  tak_inter_ca-key-priv.pem  tak_inter_ca-key.pem  tak_inter_ca.pem
ui/: .editorconfig  .prettierignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/public/themes/default/localization/: en.json  fi.json  sv.json
ui/src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
ui/src/components/: InstructionWizard.tsx  ZipButton.tsx
ui/src/components/instructions/android/: AndroidPhase1.tsx  AndroidPhase2.tsx  AndroidPhase3.tsx  AndroidPhase4.tsx  AndroidPhase5.tsx
ui/src/components/instructions/ios/: IosPhase1.tsx  IosPhase2.tsx  IosPhase3.tsx  IosPhase4.tsx  IosPhase5.tsx
ui/src/components/instructions/onboarding/: OnboardingHandler.tsx
ui/src/components/instructions/windows/: WindowsPhase1.tsx  WindowsPhase2.tsx  WindowsPhase3.tsx  WindowsPhase4.tsx
ui/src/components/routes/: AndroidInstructionPage.tsx  AndroidPhasePage.tsx  HomePage.tsx  IosInstructionPage.tsx  IosPhasePage.tsx  WindowsInstructionPage.tsx  WindowsPhasePage.tsx
ui/src/components/tabs/: AndroidTab.tsx  IosTab.tsx  TrackerTab.tsx  WindowsTab.tsx
ui/src/hooks/: use-metadata.tsx
ui/src/lib/: detectOs.ts  detectPlatform.ts  interfaces.ts
ui/src/locales/: en.json  fi.json  sv.json
(+191 files in other folders)
