[tool.poetry]
name = "takrmapi"
version = "0.1.0"
description = "RASENMAEHER integration API for TAK server"
authors = ["Eero af Heurlin <rambo@iki.fi>"]
# FIXME: Doublecheck these values
#homepage = "https://gitlab.com/advian-oss/python-tak-rmapi/"
#repository = "https://gitlab.com/advian-oss/python-tak-rmapi/"
#license = "FIXME"
readme = "README.rst"

[tool.poetry.scripts]
takrmapi = "takrmapi.console:takrmapi_cli"


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=takrmapi --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
libadvian = "^1.0"
click = "^8.0"
fastapi = ">0.89,<1.0"  # caret behaviour on 0.x is to lock to 0.x.*
python-dotenv = ">=0.21,<1.0" # explicitly specify this so pydantic.settings can use it
uvicorn = {version = "^0.20", extras = ["standard"]}
gunicorn = "^20.1"
libpvarki = { git="https://github.com/pvarki/python-libpvarki.git", tag="1.1.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
coverage = "^6.3"
pytest-cov = "^3.0"
pylint = "^2.13"
black = "^22.3"
bandit = "^1.7"
mypy = "^0.942"
pre-commit = "^2.17"
pytest-asyncio = "^0.18"
bump2version = "^1.0"
detect-secrets = "^1.2"
httpx = "^0.23"
async-asgi-testclient = "^1.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
