[tool.poetry]
name = "takrmapi"
version = "1.10.1"
description = "RASENMAEHER integration API for TAK server"
authors = ["Eero af Heurlin <rambo@iki.fi>", "Ari Karhunen <FIXME@example.com>"]
homepage = "https://github.com/pvarki/python-tak-rmapi"
repository = "https://github.com/pvarki/python-tak-rmapi"
license = "MIT"
readme = "README.rst"

[tool.poetry.scripts]
takrmapi = "takrmapi.console:takrmapi_cli"


[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=takrmapi --cov-fail-under=25 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]
extension-pkg-whitelist = "pydantic"

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
libadvian = "^1.4"
libpvarki = { git="https://github.com/pvarki/python-libpvarki.git", tag="2.1.0" }
fastapi = ">=0.89,<1.0,!=0.99.0"  # caret behaviour on 0.x is to lock to 0.x.*
jinja2 = "^3.1"
uvicorn = {version = ">=0.30,<1.0", extras = ["standard"]}
gunicorn = "^23.0"
filelock = "^3.12"
pyopenssl = "^25.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.0"
black = "^25.11"
bandit = "^1.7"
mypy = "^1.8"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.4"
httpx = ">=0.23,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
wrapt = "^1.15"
types-pyopenssl = "^23.2"



[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
